# advent-of-code

./: .gitignore
python/: .flake8  .isort.cfg  .style.yapf  day_template.py  init_day.sh  pyproject.toml  requirements.txt
python/2016/original_solutions/: day01.py  day02.py  day03.py
python/2020/original_solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day_template.py
python/2020/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py
python/2021/original_solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day_template.py
python/2021/solutions/: day01.py  day02.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py
python/2022/inputs/: 01.txt  07.example.txt
python/2022/original_solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
python/2022/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day12.py  day13.py  day15.py  day15_alt.py
python/utils/: __init__.py  algorithms.py  all.py  aoc.py  helpers.py  math_override.py  modules.py  solvers.py  structures.py  timer.py  utils.py
