[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["DeXtroTip"]
description = "Advent of Code - Python Solutions"
homepage = "https://github.com/dextrotip/advent-of-code"
maintainers = ["DeXtroTip"]
name = "advent-of-code"
version = "0.1.0"

[tool.poetry.dependencies]
python = "~3.11"
advent-of-code-data = "^1.2.1"
networkx = "^2.8.8"
z3-solver = "^4.11.2.0"
parse = "^1.19.0"
numpy = "^1.23.5"
pulp = "^2.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-isort = "^5.0.3"
isort = "^5.10.1"
yapf = "^0.32.0"
flake8-comprehensions = "^3.10.1"
flake8-builtins = "^2.0.1"
flake8-bugbear = "^22.10.27"
flake8-print = "^5.0.0"
flake8-super = "^0.1.3"
pep8-naming = "^0.13.2"

[tool.isort]
line_length = 120
